Standardize CI using addons reference workflow

--- a/tox.ini
+++ b/tox.ini
@@ -1,65 +1,82 @@
 [tox]
-minversion = 3.3.0
-envlist = py310, py311, py312, py313, lint
-skipsdist = True
+minversion = 4.4.3
+envlist = py{310,311,312,313}{,-notebook}, lint, coverage, docs, doctest
+isolated_build = True
 
 [testenv]
-usedevelop = True
-install_command = pip install  -U {opts} {packages}
-setenv =
-  VIRTUAL_ENV={envdir}
-  LANGUAGE=en_US
-  LC_ALL=en_US.utf-8
-  ARGS="-V"
-deps = git+https://github.com/Qiskit/qiskit.git
-       -r{toxinidir}/requirements.txt
-       -r{toxinidir}/requirements-dev.txt
-       cplex
-       cvxpy
-       matplotlib
-       gurobipy
-allowlist_externals = stestr
+package = wheel
+wheel_build_env = .pkg
+parallel_show_output = True
+extras =
+  test
 commands =
-  stestr run {posargs}
+  pytest {posargs}
+
+[testenv:style]
+extras =
+  style
+commands =
+  ruff format qiskit_addon_opt_mapper/ docs/ test/
+  ruff check --fix qiskit_addon_opt_mapper/ docs/ test/
+  nbqa ruff --fix docs/
 
 [testenv:lint]
-envdir = .tox/lint
-basepython = python3
+image-tester-commit = 7ae965ccf21c39e5170334ec7f4882756883860a
+deps =
+  git+https://github.com/Qiskit/documentation.git@{[testenv:lint]image-tester-commit}\#egg=sphinx-alt-text-validator&subdirectory=scripts/image-tester
+basepython = python3.10
+extras =
+  lint
 commands =
-  black --check {posargs} qiskit_addon_opt_mapper test tools docs setup.py
-  pylint -rn qiskit_addon_opt_mapper test tools
-  mypy qiskit_addon_opt_mapper test tools
-  python3 {toxinidir}/tools/check_copyright.py -path {toxinidir}
-  python3 {toxinidir}/tools/verify_headers.py qiskit_addon_opt_mapper test tools setup.py
-  python3 {toxinidir}/tools/find_stray_release_notes.py
+  ruff format --check qiskit_addon_opt_mapper/ docs/ test/
+  ruff check qiskit_addon_opt_mapper/ docs/ test/
+  ruff check --preview --select CPY001 --exclude "*.ipynb" qiskit_addon_opt_mapper/ test/
+  nbqa ruff docs/
+  mypy qiskit_addon_opt_mapper/
+  pylint -rn qiskit_addon_opt_mapper/ test/
+  sphinx-alt-text-validator -f qiskit_addon_opt_mapper
+  nbqa pylint -rn docs/
+  typos
+  reno lint
 
-[testenv:black]
-envdir = .tox/lint
-commands = black {posargs} qiskit_addon_opt_mapper test tools docs setup.py
+[testenv:{,py-,py3-,py39-,py310-,py311-,py312-,py313-}notebook]
+extras =
+  nbtest
+  notebook-dependencies
+commands =
+  pytest --nbmake --nbmake-timeout=3000 {posargs} docs/
+
+[testenv:{,py-,py3-,py39-,py310-,py311-,py312-,py313-}doctest]
+extras =
+  test
+  doctest
+commands =
+  pytest --doctest-plus --doctest-only {posargs}
 
 [testenv:coverage]
-basepython = python3
-setenv =
-  {[testenv]setenv}
-  PYTHON=coverage3 run --source qiskit_addon_opt_mapper --parallel-mode
+basepython = python3.10
+deps =
+  coverage>=7.4.1
+extras =
+  test
+  doctest
 commands =
-  stestr run {posargs}
-  coverage3 combine
-  coverage3 report
+  pytest --doctest-modules --cov=qiskit_addon_opt_mapper/
 
 [testenv:docs]
-# Editable mode breaks macOS: https://github.com/sphinx-doc/sphinx/issues/10943
-usedevelop = False
-envdir = .tox/docs
-basepython = python3
-deps =
-  -r{toxinidir}/requirements-dev.txt
-  .
+basepython = python3.10
+extras =
+  docs
 commands =
-  sphinx-build -j auto -W -T --keep-going -b html {posargs} docs/ docs/_build/html
+  sphinx-build -j auto -W -T --keep-going -b html {posargs} {toxinidir}/docs/ {toxinidir}/docs/_build/html
+passenv =
+  CI
+  GITHUB_BASE_REF
+  GITHUB_REF_NAME
 
-[pycodestyle]
-max-line-length = 105
-# + E203 because of a difference of opinion with black
-ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504, W505, E203
-
+[testenv:docs-clean]
+skip_install = true
+allowlist_externals =
+  rm
+commands =
+  rm -rf {toxinidir}/docs/stubs/ {toxinidir}/docs/_build/
