--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ dependencies = [
     "numpy>=1.23",
     "cvxpy>=1.7.3",
     "qiskit>=1.2, <3",
+    "networkx>=3.1",
+    "rustworkx",
+    "scipy>=1.9.0",
+    "docplex>=2.30.0"
 ]
 
 [project.optional-dependencies]
@@ -47,10 +51,11 @@ dev = [
     "tox>=4.4.3",
 ]
 basetest = [
+    "ddt",
     "pytest>=8.0",
     "pytest-cov>=5.0",
     "pytest-subtests>=0.13",
-    "qiskit-opt-mapper[dynamic]",
+    "qiskit-addon-opt-mapper[dynamic]",
 ]
 test = [
     "qiskit-addon-opt-mapper[basetest]",
