--- a/tox.ini
+++ b/tox.ini
@@ -39,14 +39,14 @@ commands =
   typos
   reno lint
 
-[testenv:{,py-,py3-,py39-,py310-,py311-,py312-,py313-}notebook]
+[testenv:{,py-,py3-,py310-,py311-,py312-,py313-}notebook]
 extras =
   nbtest
   notebook-dependencies
 commands =
   pytest --nbmake --nbmake-timeout=3000 {posargs} docs/
 
-[testenv:{,py-,py3-,py39-,py310-,py311-,py312-,py313-}doctest]
+[testenv:{,py-,py3-,py310-,py311-,py312-,py313-}doctest]
 extras =
   test
   doctest
@@ -56,7 +56,11 @@ commands =
 [testenv:coverage]
 basepython = python3.10
 deps =
-  coverage>=7.4.1
+    coverage>=7.4.1
+    pytest>=8.0
+    pytest-cov>=5.0
+    pytest-doctestplus>=1.2.1
+    pytest-subtests>=0.13
 extras =
   test
   doctest
