--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,7 @@ only-include = [
 allow-direct-references = true
 
 [tool.mypy]
-python_version = 3.10
+python_version = "3.10"
 show_error_codes = true
 warn_return_any = true
 warn_unused_configs = true
