--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ requires-python = ">=3.10"
 
 dependencies = [
     "numpy>=1.23",
-    "cvxpy>=1.7.3",
-    "qiskit>=1.2, <3",
+    "cvxpy",
+    "qiskit<3",
     "networkx>=3.1",
     "rustworkx",
     "scipy>=1.9.0",
