Bypass certain coverage checks temporarily

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,13 +33,14 @@ jobs:
       - name: Run coverage
         run: |
           tox -e coverage
-      - name: Convert to lcov
-        if: always()
-        run: coverage3 lcov -o coveralls.lcov
-      - name: Upload report to Coveralls
-        if: always()
-        uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          file: coveralls.lcov
-          format: lcov
+      # Temporarily disabled until we get proper github token
+      # - name: Convert to lcov
+      #   if: always()
+      #   run: coverage3 lcov -o coveralls.lcov
+      # - name: Upload report to Coveralls
+      #   if: always()
+      #   uses: coverallsapp/github-action@v2
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: coveralls.lcov
+      #     format: lcov
