--- a/.github/workflows/test_latest_versions.yml
+++ b/.github/workflows/test_latest_versions.yml
@@ -37,7 +37,17 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
-      - name: Test using tox environment
+      - name: Run core tests
         shell: bash
         run: |
-          tox -e py,notebook,doctest --parallel --parallel-no-spinner
+          tox -e py,doctest --parallel --parallel-no-spinner
+      - name: Run all notebook tests
+        if: matrix.python-version == '3.9' || matrix.python-version == '3.10'
+        shell: bash
+        run: |
+          tox -e notebook
+      - name: Run notebook tests (excluding CPLEX notebook)
+        if: matrix.python-version != '3.9' && matrix.python-version != '3.10'
+        shell: bash
+        run: |
+          pytest --nbmake docs/ --nbmake-exclude docs/how_tos/04_special_case.ipynb
