--- a/.github/workflows/test_development_versions.yml
+++ b/.github/workflows/test_development_versions.yml
@@ -62,5 +62,16 @@ jobs:
           "qiskit-ibm-runtime @ file:$(echo qiskit-ibm-runtime/dist/*.whl)"
           "qiskit-addon-utils @ file:$(echo qiskit-addon-utils/dist/*.whl)"
       - name: Test using tox environment
+        shell: bash
         run: |
-          tox -e py,notebook,doctest --parallel --parallel-no-spinner
+          tox -e py,doctest --parallel --parallel-no-spinner
+      - name: Run all notebook tests
+        if: matrix.python-version == '3.10' || matrix.python-version == '3.11'
+        shell: bash
+        run: |
+          tox -e notebook
+      - name: Run notebook tests excluding CPLEX notebook
+        if: matrix.python-version != '3.10' && matrix.python-version != '3.11'
+        shell: bash
+        run: |
+          pytest --nbmake docs/ --nbmake-exclude docs/how_tos/04_special_case.ipynb
