--- a/.github/workflows/test_latest_versions.yml
+++ b/.github/workflows/test_latest_versions.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
-      - name: Run core tests
+      - name: Test using tox environment
         shell: bash
         run: |
           tox -e py,doctest --parallel --parallel-no-spinner
@@ -46,7 +46,7 @@ jobs:
         shell: bash
         run: |
           tox -e notebook
-      - name: Run notebook tests (excluding CPLEX notebook)
+      - name: Run notebook tests excluding CPLEX notebook
         if: matrix.python-version != '3.10' && matrix.python-version != '3.11'
         shell: bash
         run: |
