--- a/.github/workflows/test_minimum_versions.yml
+++ b/.github/workflows/test_minimum_versions.yml
@@ -46,4 +46,4 @@ jobs:
         if: matrix.python-version != '3.10' && matrix.python-version != '3.11'
         shell: bash
         run: |
-          tox -e notebook -- --nbmake docs/ --nbmake-exclude docs/how_tos/04_special_case.ipynb
+          tox -e notebook -- docs/how_tos/01_optimization_problem.ipynb docs/how_tos/02_converters_for_optimization_problems.ipynb
