This commit adds the missing config to the github actions workflow for running required tests to the merge queue. This is necessary to make the job required in the branch protection rules, because the jobs will need to pass as part of the merge queue too.

--- a/.github/workflows/test_latest_versions.yml
+++ b/.github/workflows/test_latest_versions.yml
@@ -11,7 +11,9 @@ on:
       - 'stable/**'
   schedule:
     - cron: '0 1 * * *'
-
+  merge_group:
+    types: [checks_requested]
+    
 jobs:
   tests:
     name: latest version tests (${{ matrix.os }}, ${{ matrix.python-version }})
